# link-example

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Link_SampleCode(iris_classification).ipynb  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  sklearn_iris.ipynb  sklearn_titanic.ipynb  spiral_classification.ipynb  vae_mnist_generation.ipynb
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: docker-image.yml  issue-to-shortcut-story.yml  pr-to-shortcut-story.yml  pull-request.yml  python-package.yml  python.yml
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
examples/: DQLearning-cartpole-example.ipynb  README.md  cnn_mnist_classification.ipynb  denoising_autoencoder_pytorch.ipynb  seq_classification.ipynb  sklearn_iris.ipynb  sklearn_titanic.ipynb  spiral_classification.ipynb  using-xgboost-with-scikit-learn.ipynb  vae_mnist_generation.ipynb
guide/: directory_structure.md  eda_check_list.md  git.md  github_slack.md  kick_off_checklist.md  pre_commit.md  project-pipeline.md  project_template_update.md  python_environment.md  readme_convention.md  repository_mangement.md
guide/python_environment/: linux_conda.md  linux_pyenv_virtualenv.md  osx_conda.md  osx_pyenv_virtualenv.md  window_conda.md
hooks/: add_submodules.py  install.sh  license-checker.py  license.txt
scripts/: download-link.py
src/: __init__.py  erase_me.ipynb  erase_me.py
tests/: test_sample.ipynb  test_sample.py
