#
# According to PEP-518, https://www.python.org/dev/peps/pep-0518/
#
[build-system]
# Minimum requirements for the build system to execute, according to PEP-508
requires = [
    "build>=0.7",
    "setuptools>=59.4",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py38"]
exclude = ""

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ""

[tool.mypy]
strict = true
no_site_packages = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
